# hyfluid

./: .gitignore  CMakeLists.txt  README.md  hyfluid.ffmpeg.h  hyfluid.inspector.cpp  hyfluid.inspector.cu  hyfluid.inspector.h  hyfluid.inspector.ixx  hyfluid.plugin.ixx  hyfluid.project.cpp  hyfluid.project.ixx  hyfluid.train.config.h  hyfluid.train.cpp  hyfluid.train.cu  hyfluid.train.h  hyfluid.train.ixx  main.cpp  ngp.dataset.cpp  ngp.dataset.ixx  ngp.train.cpp  ngp.train.cu  ngp.train.h  ngp.train.ixx
.github/workflows/: arch-build.yml  documentation.yml  windows-build.yml
benchmarks/: main.cpp  xcli.cpp  xcli.ixx
docs/: dataset_preparation.tex  documentation.tex  hyfluid_optimization.tex  refs.bib
